# game-util-rs

./: .gitignore  Cargo.toml
build-utils/: Cargo.toml
build-utils/src/: lib.rs  sprite_pack.rs
example/: Cargo.toml  build.rs  index.html
example/src/: lib.rs  main.rs
examples/: full.rs  text.rs
src/: desktop.rs  gameloop.rs  glutil.rs  lib.rs  shape.rs  sound.rs  sound_rodio.rs  sprite.rs  text.rs  tilemap.rs  web.rs  window.rs
src/desktop/: glutil.rs  mod.rs  sound.rs  util.rs
src/shaders/: shape.frag.glsl  shape.vert.glsl  sprite-fragment.glsl  sprite-vertex.glsl  sprite.frag.glsl  sprite.vert.glsl  text-fragment.glsl  text-vertex.glsl  text.frag.glsl  text.vert.glsl  tilemap-fragment.glsl  tilemap-vertex.glsl  tilemap.frag.glsl  tilemap.vert.glsl
src/web/: glutil.rs  mod.rs  sound.rs  util.rs
