[package]
name = "game-util"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

[dependencies]
euclid = { version = "0.22", features = ["serde"] }
glow = "0.6"
winit = { version = "0.23", features = ["serde", "web-sys"] }
rusttype = { version = "0.9", features = ["gpu_cache"] }
image = "0.23"
serde = { version = "1.0", features = ["derive"] }
arrayvec = "0.5"
scopeguard = "1.1"
lazy_static = "1.4.0"
instant = "0.1.9"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
glutin = "0.25"
rodio = "0.11.0"
futures = "0.3.8"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3.46"
