[package]
name = "build-utils"
version = "0.1.0"
authors = ["MinusKelvin <mark.carlson@minuskelvin.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
texture_packer = "0.21.0"
regex = "1.3.4"
lazy_static = "1.4.0"
image = "0.23.1"